# tcc_public

./: LICENSE  README.md  pyproject.toml
code/diabetes/: ssl_diabetes_self.ipynb  ssl_naive_diabetes.ipynb  sup_diabetes.ipynb
code/hotel/: ssl_hotel_self.ipynb  ssl_naive_hotel.ipynb  sup_hotel.ipynb
code/mushrooms/: ssl_mushrooms_self.ipynb  ssl_naive_mushrooms.ipynb  sup_mushrooms.ipynb
code/pumpkins/: ssl_naive_pumpkins.ipynb  ssl_pumpkins_self.ipynb  sup_pumpkins.ipynb
code/water/: ssl_naive_water.ipynb  ssl_water_self.ipynb  sup_water.ipynb
tables/: diabetes_naive.xlsx  diabetes_self.xlsx  hotel_naive.xlsx  hotel_self.xlsx  mushrooms_naive.xlsx  mushrooms_self.xlsx  pumpkins_naive.xlsx  pumpkins_self.xlsx  water_naive.xlsx  water_self.xlsx
