[tool.poetry]
name = "tcc-public"
version = "1.0.0"
description = ""
authors = ["Pedro H. C. Morais <pedrohcm5@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
numpy = "^1.26.2"
seaborn = "^0.13.0"
loguru = "^0.7.2"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
